Add command - selectNegativeFace.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(SOURCE_FILES
     "cxapiSimpleHelloWorldCmd.h"
     "cxapiSimpleHelloWorldCmd.cpp"
+	"cxapiSelectNegativeFaceCmd.h"
+	"cxapiSelectNegativeFaceCmd.cpp"
 	"pluginMain.cpp"
 )
 
